resolves #35 - Mac os double scroll. Breaking changes, dom changed.
* initial solution for MacOs problem where a double scroll is visible. Outer container had position relative, and MacOs doesn't let it hide the native scroll. Removing the relative position seems to  solve the issue - requires a new positioning element between the outer container and the custom scrollbar

* remove deprecated usage of ref prop, use ref callbacks instead

* check if click was on custom scrollbar, by measuring the scrollbar size, since it can change by user css

--- a/src/main/cs.scss
+++ b/src/main/cs.scss
@@ -1,12 +1,15 @@
 .custom-scroll {
-
+  $customScrollBarMargin: 3px;
   $scroll-margin-top: 6px;
   min-height: 0;
   min-width: 0;
 
   .outer-container {
     overflow: hidden;
-    position: relative;
+
+    .positioning {
+      position: relative;
+    }
 
     &:hover .custom-scrollbar {
       opacity: 1;
@@ -44,7 +47,7 @@
     position: absolute;
     height: 100%;
     width: 6px;
-    right: 3px;
+    right: $customScrollBarMargin;
     opacity: 0;
     z-index: 1;
     transition: opacity 0.4s ease-out;
@@ -55,7 +58,7 @@
 
     &.custom-scrollbar-rtl {
       right: auto;
-      left: 3px;
+      left: $customScrollBarMargin;
     }
   }
 
